# modelscope-downloader

./: .gitignore  README.md  pyproject.toml
msdl/: __init__.py  cli.py  client.py  planner.py
tests/: test_cli.py  test_client.py  test_planner.py
