[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelscope-downloader"
version = "0.1.0"
description = "Small ModelScope CLI downloader with optional SSL verification bypass."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31.0",
  "rich>=13.7.0",
]

[project.scripts]
ms = "msdl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["msdl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
